header fix on narrow widths

--- a/src/styles/partials/media.less
+++ b/src/styles/partials/media.less
@@ -335,7 +335,7 @@
       margin-bottom: 190px;
       .lead {
         /*font-size: 38px;*/
-        font-size: 11vw;
+        font-size: 11.7vw;
         line-height: 45px;
         margin-bottom: 29px;
         .popup-stroke {
